tambah tabel perbandingan

--- a/notebook/modeling_template.ipynb
+++ b/notebook/modeling_template.ipynb
@@ -319,8 +319,188 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "2094327e",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "📊 TABEL PERBANDINGAN APRIORI vs FP-GROWTH:\n",
+            "Algoritma                          antecedents                          consequents  support  confidence      lift\n",
+            "  Apriori        (60 TEATIME FAIRY CAKE CASES)    (PACK OF 72 RETROSPOT CAKE CASES) 0.020457    0.503012  7.889220\n",
+            "  Apriori          (ALARM CLOCK BAKELIKE PINK)         (ALARM CLOCK BAKELIKE GREEN) 0.021069    0.546900 11.037372\n",
+            "  Apriori          (ALARM CLOCK BAKELIKE RED )         (ALARM CLOCK BAKELIKE GREEN) 0.032829    0.590959 11.926565\n",
+            "  Apriori         (ALARM CLOCK BAKELIKE GREEN)          (ALARM CLOCK BAKELIKE RED ) 0.032829    0.662546 11.926565\n",
+            "  Apriori          (ALARM CLOCK BAKELIKE PINK)          (ALARM CLOCK BAKELIKE RED ) 0.024683    0.640700 11.533298\n",
+            "  Apriori                (SPACEBOY LUNCH BOX )               (DOLLY GIRL LUNCH BOX) 0.025969    0.595506 15.556512\n",
+            "  Apriori               (DOLLY GIRL LUNCH BOX)                (SPACEBOY LUNCH BOX ) 0.025969    0.678400 15.556512\n",
+            "  Apriori (GARDENERS KNEELING PAD CUP OF TEA )  (GARDENERS KNEELING PAD KEEP CALM ) 0.028542    0.725857 15.451189\n",
+            "  Apriori  (GARDENERS KNEELING PAD KEEP CALM ) (GARDENERS KNEELING PAD CUP OF TEA ) 0.028542    0.607562 15.451189\n",
+            "  Apriori    (GREEN REGENCY TEACUP AND SAUCER)     (PINK REGENCY TEACUP AND SAUCER) 0.028848    0.642565 17.751532\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Tambahkan kolom sumber algoritma\n",
+        "rules_apriori['Algoritma'] = 'Apriori'\n",
+        "rules_fp['Algoritma'] = 'FP-Growth'\n",
+        "\n",
+        "# Gabungkan dua dataframe aturan\n",
+        "combined_rules = pd.concat([rules_apriori, rules_fp], ignore_index=True)\n",
+        "\n",
+        "# Ambil kolom penting\n",
+        "comparison_table = combined_rules[['Algoritma', 'antecedents', 'consequents', 'support', 'confidence', 'lift']]\n",
+        "\n",
+        "# (Opsional) ambil aturan-aturan dengan lift dan confidence yang tinggi\n",
+        "filtered_comparison = comparison_table[\n",
+        "    (comparison_table['confidence'] > 0.5) & (comparison_table['lift'] > 1.2)\n",
+        "]\n",
+        "\n",
+        "# Tampilkan 10 aturan teratas sebagai contoh\n",
+        "print(\"📊 TABEL PERBANDINGAN APRIORI vs FP-GROWTH:\")\n",
+        "print(filtered_comparison.head(10).to_string(index=False))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "id": "d3682045",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jumlah aturan setelah filtering:\n",
+            "Apriori     : 35\n",
+            "FP-Growth   : 35\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Cek jumlah aturan dari masing-masing algoritma yang lolos filter\n",
+        "print(\"Jumlah aturan setelah filtering:\")\n",
+        "print(\"Apriori     :\", len(rules_apriori[(rules_apriori['confidence'] > 0.5) & (rules_apriori['lift'] > 1.2)]))\n",
+        "print(\"FP-Growth   :\", len(rules_fp[(rules_fp['confidence'] > 0.5) & (rules_fp['lift'] > 1.2)]))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "id": "568eeeb8",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "📊 TABEL PERBANDINGAN ATURAN APRIORI vs FP-GROWTH (Setelah Filtering):\n",
+            "Algoritma                                                         antecedents                                                         consequents  support  confidence      lift\n",
+            "  Apriori                                       (60 TEATIME FAIRY CAKE CASES)                                   (PACK OF 72 RETROSPOT CAKE CASES) 0.020457    0.503012  7.889220\n",
+            "FP-Growth                                       (60 TEATIME FAIRY CAKE CASES)                                   (PACK OF 72 RETROSPOT CAKE CASES) 0.020457    0.503012  7.889220\n",
+            "  Apriori (ROSES REGENCY TEACUP AND SAUCER , GREEN REGENCY TEACUP AND SAUCER)                                    (PINK REGENCY TEACUP AND SAUCER) 0.024316    0.712747 19.690386\n",
+            "FP-Growth (ROSES REGENCY TEACUP AND SAUCER , GREEN REGENCY TEACUP AND SAUCER)                                    (PINK REGENCY TEACUP AND SAUCER) 0.024316    0.712747 19.690386\n",
+            "  Apriori                                       (WOODEN FRAME ANTIQUE WHITE )                                 (WOODEN PICTURE FRAME WHITE FINISH) 0.029032    0.573850 10.480142\n",
+            "FP-Growth                                       (WOODEN FRAME ANTIQUE WHITE )                                 (WOODEN PICTURE FRAME WHITE FINISH) 0.029032    0.573850 10.480142\n",
+            "  Apriori                                 (WOODEN PICTURE FRAME WHITE FINISH)                                       (WOODEN FRAME ANTIQUE WHITE ) 0.029032    0.530201 10.480142\n",
+            "FP-Growth                                 (WOODEN PICTURE FRAME WHITE FINISH)                                       (WOODEN FRAME ANTIQUE WHITE ) 0.029032    0.530201 10.480142\n",
+            "  Apriori                                  (RED HANGING HEART T-LIGHT HOLDER)                                (WHITE HANGING HEART T-LIGHT HOLDER) 0.028174    0.664740  5.391559\n",
+            "FP-Growth                                  (RED HANGING HEART T-LIGHT HOLDER)                                (WHITE HANGING HEART T-LIGHT HOLDER) 0.028174    0.664740  5.391559\n",
+            "  Apriori                                 (PAPER CHAIN KIT VINTAGE CHRISTMAS)                                   (PAPER CHAIN KIT 50'S CHRISTMAS ) 0.027807    0.640339 10.560411\n",
+            "FP-Growth                                 (PAPER CHAIN KIT VINTAGE CHRISTMAS)                                   (PAPER CHAIN KIT 50'S CHRISTMAS ) 0.027807    0.640339 10.560411\n",
+            "  Apriori                                (PACK OF 60 PINK PAISLEY CAKE CASES)                                   (PACK OF 72 RETROSPOT CAKE CASES) 0.020702    0.500741  7.853597\n",
+            "FP-Growth                                (PACK OF 60 PINK PAISLEY CAKE CASES)                                   (PACK OF 72 RETROSPOT CAKE CASES) 0.020702    0.500741  7.853597\n",
+            "  Apriori                                                (LUNCH BAG WOODLAND)                                           (LUNCH BAG RED RETROSPOT) 0.026888    0.523242  6.428120\n",
+            "FP-Growth                                                (LUNCH BAG WOODLAND)                                           (LUNCH BAG RED RETROSPOT) 0.026888    0.523242  6.428120\n",
+            "  Apriori                                           (LUNCH BAG PINK POLKADOT)                                           (LUNCH BAG RED RETROSPOT) 0.032462    0.557308  6.846629\n",
+            "FP-Growth                                           (LUNCH BAG PINK POLKADOT)                                           (LUNCH BAG RED RETROSPOT) 0.032462    0.557308  6.846629\n",
+            "  Apriori                                       (LUNCH BAG DOLLY GIRL DESIGN)                                        (LUNCH BAG SPACEBOY DESIGN ) 0.021804    0.588430  9.597695\n",
+            "FP-Growth                                       (LUNCH BAG DOLLY GIRL DESIGN)                                        (LUNCH BAG SPACEBOY DESIGN ) 0.021804    0.588430  9.597695\n",
+            "  Apriori                                            (JUMBO STORAGE BAG SUKI)                                           (JUMBO BAG RED RETROSPOT) 0.027133    0.560051  5.565396\n",
+            "FP-Growth                                            (JUMBO STORAGE BAG SUKI)                                           (JUMBO BAG RED RETROSPOT) 0.027133    0.560051  5.565396\n",
+            "  Apriori                                              (JUMBO BAG STRAWBERRY)                                           (JUMBO BAG RED RETROSPOT) 0.025847    0.632684  6.287174\n",
+            "FP-Growth                                              (JUMBO BAG STRAWBERRY)                                           (JUMBO BAG RED RETROSPOT) 0.025847    0.632684  6.287174\n",
+            "  Apriori  (ROSES REGENCY TEACUP AND SAUCER , PINK REGENCY TEACUP AND SAUCER)                                   (GREEN REGENCY TEACUP AND SAUCER) 0.024316    0.880266 19.607236\n",
+            "FP-Growth  (ROSES REGENCY TEACUP AND SAUCER , PINK REGENCY TEACUP AND SAUCER)                                   (GREEN REGENCY TEACUP AND SAUCER) 0.024316    0.880266 19.607236\n",
+            "  Apriori                                    (JUMBO BAG PINK VINTAGE PAISLEY)                                           (JUMBO BAG RED RETROSPOT) 0.020518    0.545603  5.421822\n",
+            "FP-Growth                                    (JUMBO BAG PINK VINTAGE PAISLEY)                                           (JUMBO BAG RED RETROSPOT) 0.020518    0.545603  5.421822\n",
+            "  Apriori                                    (JUMBO  BAG BAROQUE BLACK WHITE)                                           (JUMBO BAG RED RETROSPOT) 0.022662    0.558069  5.545708\n",
+            "FP-Growth                                    (JUMBO  BAG BAROQUE BLACK WHITE)                                           (JUMBO BAG RED RETROSPOT) 0.022662    0.558069  5.545708\n",
+            "  Apriori                                  (ROSES REGENCY TEACUP AND SAUCER )                                          (REGENCY CAKESTAND 3 TIER) 0.026459    0.516746  4.478195\n",
+            "FP-Growth                                  (ROSES REGENCY TEACUP AND SAUCER )                                          (REGENCY CAKESTAND 3 TIER) 0.026459    0.516746  4.478195\n",
+            "  Apriori                                  (ROSES REGENCY TEACUP AND SAUCER )                                   (GREEN REGENCY TEACUP AND SAUCER) 0.034115    0.666268 14.840596\n",
+            "FP-Growth                                  (ROSES REGENCY TEACUP AND SAUCER )                                   (GREEN REGENCY TEACUP AND SAUCER) 0.034115    0.666268 14.840596\n",
+            "  Apriori                                  (ROSES REGENCY TEACUP AND SAUCER )                                    (PINK REGENCY TEACUP AND SAUCER) 0.027623    0.539474 14.903531\n",
+            "FP-Growth                                  (ROSES REGENCY TEACUP AND SAUCER )                                    (PINK REGENCY TEACUP AND SAUCER) 0.027623    0.539474 14.903531\n",
+            "  Apriori                                    (PINK REGENCY TEACUP AND SAUCER)                                  (ROSES REGENCY TEACUP AND SAUCER ) 0.027623    0.763113 14.903531\n",
+            "FP-Growth                                    (PINK REGENCY TEACUP AND SAUCER)                                  (ROSES REGENCY TEACUP AND SAUCER ) 0.027623    0.763113 14.903531\n",
+            "  Apriori                                    (PINK REGENCY TEACUP AND SAUCER)                                   (GREEN REGENCY TEACUP AND SAUCER) 0.028848    0.796954 17.751532\n",
+            "FP-Growth                                    (PINK REGENCY TEACUP AND SAUCER)                                   (GREEN REGENCY TEACUP AND SAUCER) 0.028848    0.796954 17.751532\n",
+            "  Apriori                                    (PINK REGENCY TEACUP AND SAUCER) (ROSES REGENCY TEACUP AND SAUCER , GREEN REGENCY TEACUP AND SAUCER) 0.024316    0.671743 19.690386\n",
+            "FP-Growth                                    (PINK REGENCY TEACUP AND SAUCER) (ROSES REGENCY TEACUP AND SAUCER , GREEN REGENCY TEACUP AND SAUCER) 0.024316    0.671743 19.690386\n",
+            "  Apriori                                   (GREEN REGENCY TEACUP AND SAUCER)                                  (ROSES REGENCY TEACUP AND SAUCER ) 0.034115    0.759891 14.840596\n",
+            "FP-Growth                                   (GREEN REGENCY TEACUP AND SAUCER)                                  (ROSES REGENCY TEACUP AND SAUCER ) 0.034115    0.759891 14.840596\n",
+            "  Apriori                                   (GREEN REGENCY TEACUP AND SAUCER)                                          (REGENCY CAKESTAND 3 TIER) 0.023458    0.522510  4.528145\n",
+            "FP-Growth                                   (GREEN REGENCY TEACUP AND SAUCER)                                          (REGENCY CAKESTAND 3 TIER) 0.023458    0.522510  4.528145\n",
+            "  Apriori                                   (GREEN REGENCY TEACUP AND SAUCER)                                    (PINK REGENCY TEACUP AND SAUCER) 0.028848    0.642565 17.751532\n",
+            "FP-Growth                                   (GREEN REGENCY TEACUP AND SAUCER)                                    (PINK REGENCY TEACUP AND SAUCER) 0.028848    0.642565 17.751532\n",
+            "  Apriori                                   (GREEN REGENCY TEACUP AND SAUCER)  (ROSES REGENCY TEACUP AND SAUCER , PINK REGENCY TEACUP AND SAUCER) 0.024316    0.541610 19.607236\n",
+            "FP-Growth                                   (GREEN REGENCY TEACUP AND SAUCER)  (ROSES REGENCY TEACUP AND SAUCER , PINK REGENCY TEACUP AND SAUCER) 0.024316    0.541610 19.607236\n",
+            "  Apriori                                 (GARDENERS KNEELING PAD KEEP CALM )                                (GARDENERS KNEELING PAD CUP OF TEA ) 0.028542    0.607562 15.451189\n",
+            "FP-Growth                                 (GARDENERS KNEELING PAD KEEP CALM )                                (GARDENERS KNEELING PAD CUP OF TEA ) 0.028542    0.607562 15.451189\n",
+            "  Apriori                                (GARDENERS KNEELING PAD CUP OF TEA )                                 (GARDENERS KNEELING PAD KEEP CALM ) 0.028542    0.725857 15.451189\n",
+            "FP-Growth                                (GARDENERS KNEELING PAD CUP OF TEA )                                 (GARDENERS KNEELING PAD KEEP CALM ) 0.028542    0.725857 15.451189\n",
+            "  Apriori                                              (DOLLY GIRL LUNCH BOX)                                               (SPACEBOY LUNCH BOX ) 0.025969    0.678400 15.556512\n",
+            "FP-Growth                                              (DOLLY GIRL LUNCH BOX)                                               (SPACEBOY LUNCH BOX ) 0.025969    0.678400 15.556512\n",
+            "  Apriori                                               (SPACEBOY LUNCH BOX )                                              (DOLLY GIRL LUNCH BOX) 0.025969    0.595506 15.556512\n",
+            "FP-Growth                                               (SPACEBOY LUNCH BOX )                                              (DOLLY GIRL LUNCH BOX) 0.025969    0.595506 15.556512\n",
+            "  Apriori                                        (ALARM CLOCK BAKELIKE GREEN)                                         (ALARM CLOCK BAKELIKE RED ) 0.032829    0.662546 11.926565\n",
+            "FP-Growth                                        (ALARM CLOCK BAKELIKE GREEN)                                         (ALARM CLOCK BAKELIKE RED ) 0.032829    0.662546 11.926565\n",
+            "  Apriori                                         (ALARM CLOCK BAKELIKE RED )                                        (ALARM CLOCK BAKELIKE GREEN) 0.032829    0.590959 11.926565\n",
+            "FP-Growth                                         (ALARM CLOCK BAKELIKE RED )                                        (ALARM CLOCK BAKELIKE GREEN) 0.032829    0.590959 11.926565\n",
+            "  Apriori                                         (ALARM CLOCK BAKELIKE PINK)                                         (ALARM CLOCK BAKELIKE RED ) 0.024683    0.640700 11.533298\n",
+            "FP-Growth                                         (ALARM CLOCK BAKELIKE PINK)                                         (ALARM CLOCK BAKELIKE RED ) 0.024683    0.640700 11.533298\n",
+            "  Apriori                                         (ALARM CLOCK BAKELIKE PINK)                                        (ALARM CLOCK BAKELIKE GREEN) 0.021069    0.546900 11.037372\n",
+            "FP-Growth                                         (ALARM CLOCK BAKELIKE PINK)                                        (ALARM CLOCK BAKELIKE GREEN) 0.021069    0.546900 11.037372\n",
+            "  Apriori                                           (JUMBO BAG PINK POLKADOT)                                           (JUMBO BAG RED RETROSPOT) 0.033932    0.626697  6.227681\n",
+            "FP-Growth                                           (JUMBO BAG PINK POLKADOT)                                           (JUMBO BAG RED RETROSPOT) 0.033932    0.626697  6.227681\n",
+            "  Apriori   (GREEN REGENCY TEACUP AND SAUCER, PINK REGENCY TEACUP AND SAUCER)                                  (ROSES REGENCY TEACUP AND SAUCER ) 0.024316    0.842887 16.461512\n",
+            "FP-Growth   (GREEN REGENCY TEACUP AND SAUCER, PINK REGENCY TEACUP AND SAUCER)                                  (ROSES REGENCY TEACUP AND SAUCER ) 0.024316    0.842887 16.461512\n"
+          ]
+        }
+      ],
+      "source": [
+        "# ===== FILTERING ATURAN DENGAN LIFT > 1.2 DAN CONFIDENCE > 0.5 =====\n",
+        "filtered_apriori = rules_apriori[\n",
+        "    (rules_apriori['confidence'] > 0.5) & \n",
+        "    (rules_apriori['lift'] > 1.2)\n",
+        "].copy()\n",
+        "filtered_apriori['Algoritma'] = 'Apriori'\n",
+        "\n",
+        "filtered_fp = rules_fp[\n",
+        "    (rules_fp['confidence'] > 0.5) & \n",
+        "    (rules_fp['lift'] > 1.2)\n",
+        "].copy()\n",
+        "filtered_fp['Algoritma'] = 'FP-Growth'\n",
+        "\n",
+        "# ===== GABUNGKAN KEDUANYA UNTUK DIBANDINGKAN DALAM SATU TABEL =====\n",
+        "combined_filtered = pd.concat([filtered_apriori, filtered_fp], ignore_index=True)\n",
+        "comparison_table = combined_filtered[['Algoritma', 'antecedents', 'consequents', 'support', 'confidence', 'lift']]\n",
+        "\n",
+        "# ===== URUTKAN UNTUK MEMPERMUDAH PERBANDINGAN =====\n",
+        "comparison_table = comparison_table.sort_values(by=['antecedents', 'consequents', 'Algoritma']).reset_index(drop=True)\n",
+        "\n",
+        "# ===== TAMPILKAN HASIL TABEL PERBANDINGAN =====\n",
+        "print(\"📊 TABEL PERBANDINGAN ATURAN APRIORI vs FP-GROWTH (Setelah Filtering):\")\n",
+        "print(comparison_table.to_string(index=False))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "465cb269",
       "metadata": {},
       "outputs": [],
       "source": []
